errores de la plantilla corregido, dark and light

--- a/themes/hugo-academic/layouts/partials/navbar.html
+++ b/themes/hugo-academic/layouts/partials/navbar.html
@@ -135,6 +135,7 @@
       {{ if site.Params.day_night }}
       <li class="nav-item dropdown theme-dropdown">
         <a href="#" class="nav-link js-theme-selector" data-toggle="dropdown" aria-haspopup="true">
+          <i class="fas fa-palette" aria-hidden="true"></i>
         </a>
         <div class="dropdown-menu">
           <a href="#" class="dropdown-item js-set-theme-light">
